<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_top">

            <ImageView
                android:src="@drawable/download1"
                android:layout_marginBottom="@dimen/margin_top"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/username"
                android:hint="@string/email_or_numberPhone"
                android:drawableLeft="@drawable/ic_smartphone_with_email"
                android:drawablePadding="@dimen/padding_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="highlight" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/pasword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/padding_left"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:met_floatingLabel="highlight" />

            <LinearLayout
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">

                <Button
                    android:id="@+id/dangnhap"
                    android:text="@string/login"
                    android:background="@drawable/background_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false" />
                <Button
                    android:id="@+id/dangki1"
                    android:layout_marginLeft="@dimen/margin_top"
                    android:text="@string/register"
                    android:background="@drawable/background_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/forgetpassword"
                android:layout_width="match_parent"
                android:gravity="right"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_height="wrap_content"
                android:textColor="@color/svg"
                android:textSize="@dimen/text_normal"
                android:autoLink="all"
                />


        </LinearLayout>

    </ScrollView>
</layout>
